windows build finally working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,9 +106,13 @@ endif()
 
 if(ENABLE_PYTHON)
   find_package (Python REQUIRED COMPONENTS Interpreter Development)
-  target_include_directories(OpenSCAD PRIVATE ${Python_INCLUDE_DIRS})
-  target_link_directories(OpenSCAD PRIVATE ${Python_LIBRARY_DIRS})
-  target_link_libraries(OpenSCAD PRIVATE ${Python_LIBRARIES})
+  if(MXECROSS)
+    target_include_directories(OpenSCAD PRIVATE "/home/gsohler/openscad_deps/mxe/usr/x86_64-w64-mingw32.static.posix/include/python3.10")
+    target_link_libraries(OpenSCAD PRIVATE  "${CMAKE_SOURCE_DIR}/libpython3.10.dll.a")
+  else()
+    target_include_directories(OpenSCAD PRIVATE ${Python_INCLUDE_DIRS})
+    target_link_directories(OpenSCAD PRIVATE ${Python_LIBRARY_DIRS})
+  endif()
 endif()
 set(SUFFIX "" CACHE STRING "Installation suffix for binary (e.g. 'nightly')")
 set(STACKSIZE 8388608 CACHE STRING "Stack size (default is 8MB)")
