--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://github.com/microsoft/mimalloc.git
 [submodule "submodules/manifold"]
 	path = submodules/manifold
-	url = https://github.com/elalish/manifold
+	url = https://github.com/elalish/manifold.git
