--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ option(USE_CCACHE "Use ccache to speed up compilation." ON)
 option(ENABLE_CAIRO "Enable support for cairo vector graphics library." ON)
 option(ENABLE_SPNAV "Enable support for libspnav input driver." ON)
 option(ENABLE_HIDAPI "Enable support for HIDAPI input driver." ON)
-option(ENABLE_MANIFOLD "Enable support for Manifold library for CSG." ON)
+option(ENABLE_MANIFOLD "Enable support for Manifold library for CSG." OFF)
 option(ENABLE_TBB "Enable support for oneAPI Threading Building Blocks." ON)
 option(ALLOW_BUNDLED_HIDAPI "Allow usage of bundled HIDAPI library (Windows only)." OFF)
 option(ENABLE_PYTHON "Enable experimental Python Interpreter" OFF)
@@ -110,12 +110,13 @@ endif()
 
 if(ENABLE_PYTHON)
   find_package (Python REQUIRED COMPONENTS Interpreter Development)
+  message(STATUS "PYTHION" )
   if(MXECROSS)
     target_include_directories(OpenSCAD PRIVATE "/home/gsohler/openscad_deps/mxe/usr/x86_64-w64-mingw32.static.posix/include/python3.10")
     target_link_libraries(OpenSCAD PRIVATE  "${CMAKE_SOURCE_DIR}/libpython3.10.dll.a")
   else()
     target_include_directories(OpenSCAD PRIVATE ${Python_INCLUDE_DIRS})
-    target_link_directories(OpenSCAD PRIVATE ${Python_LIBRARY_DIRS})
+    target_link_libraries(OpenSCAD PRIVATE ${Python_LIBRARIES})
   endif()
 endif()
 set(SUFFIX "" CACHE STRING "Installation suffix for binary (e.g. 'nightly')")
