textures merged into latest python

--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,7 @@ src/*.debug
 /release
 tests/DartConfiguration.tcl
 tests/__pycache__/
+tests/venv
 CMakeCache.txt
 CMakeFiles/
 cmake_install.cmake
