--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -402,6 +402,10 @@ message(STATUS "Flex: ${FLEX_VERSION}")
 find_package(BISON REQUIRED QUIET)
 message(STATUS "Bison: ${BISON_VERSION}")
 
+find_package(JPEG REQUIRED QUIET)
+target_include_directories(OpenSCAD SYSTEM PRIVATE ${JPEG_INCLUDE_DIRS})
+target_link_libraries(OpenSCAD PRIVATE ${JPEG_LIBRARIES})
+
 if(NOT MSVC)
   find_package(Lib3MF QUIET)
   if (LIB3MF_FOUND)
@@ -598,6 +602,7 @@ set(CORE_SOURCES
   src/core/CgalAdvNode.cc
   src/core/Children.cc
   src/core/ColorNode.cc
+  src/core/TextureNode.cc
   src/core/Context.cc
   src/core/ContextFrame.cc
   src/core/ContextMemoryManager.cc
