--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "submodules/manifold"]
 	path = submodules/manifold
 	url = https://github.com/elalish/manifold.git
+[submodule "submodules/libfive"]
+	path = submodules/libfive
+	url = https://github.com/libfive/libfive.git
