--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -617,6 +617,7 @@ set(CORE_SOURCES
   src/core/CgalAdvNode.cc
   src/core/Children.cc
   src/core/ColorNode.cc
+  src/core/PullNode.cc
   src/core/TextureNode.cc
   src/core/Context.cc
   src/core/ContextFrame.cc
