--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "submodules/libfive"]
 	path = submodules/libfive
 	url = https://github.com/libfive/libfive.git
+[submodule "submodules/cryptopp"]
+	path = submodules/cryptopp
+	url = https://github.com/weidai11/cryptopp.git
