--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -106,48 +106,52 @@ if(USE_IMAGE_COMPARE_PY)
     message(STATUS "venv already setup for ${IMAGE_COMPARE_EXE}")
   endif()
 else()
-  message(STATUS "Couldn't find imagemagick 'convert' program")
-  set(DIFFPNG 1)
-endif()
+  # Imagemagick
+  find_package(ImageMagick COMPONENTS convert)
+  if(ImageMagick_convert_FOUND)
+    message(STATUS "ImageMagick convert executable found: " ${ImageMagick_convert_EXECUTABLE})
+    set(IMAGE_COMPARE_EXE ${ImageMagick_convert_EXECUTABLE})
+    if ("${ImageMagick_VERSION_STRING}" VERSION_LESS "6.5.9.4")
+      message(STATUS "ImageMagick version less than 6.5.9.4, cannot use -morphology comparison")
+      message(STATUS "ImageMagick Using older image comparison method")
+      set(COMPARATOR "--comparator=old")
+    endif()
 
-if (ImageMagick_convert_FOUND)
-  if ("${ImageMagick_VERSION_STRING}" VERSION_LESS "6.5.9.4")
-    message(STATUS "ImageMagick version less than 6.5.9.4, cannot use -morphology comparison")
-    message(STATUS "ImageMagick Using older image comparison method")
-    set(COMPARATOR "--comparator=old")
-  endif()
+    execute_process(COMMAND ${IMAGE_COMPARE_EXE} --version OUTPUT_VARIABLE IM_OUT)
+    if (${IM_OUT} MATCHES "OpenMP")
+      # http://www.daniloaz.com/en/617/systems/high-cpu-load-when-converting-images-with-imagemagick
+      message(STATUS "ImageMagick: OpenMP bug workaround - setting MAGICK_THREAD_LIMIT=1")
+      list(APPEND CTEST_ENVIRONMENT "MAGICK_THREAD_LIMIT=1")
+    endif()
 
-  execute_process(COMMAND ${IMAGE_COMPARE_EXE} --version OUTPUT_VARIABLE IM_OUT)
-  if (${IM_OUT} MATCHES "OpenMP")
-    # http://www.daniloaz.com/en/617/systems/high-cpu-load-when-converting-images-with-imagemagick
-    message(STATUS "ImageMagick: OpenMP bug workaround - setting MAGICK_THREAD_LIMIT=1")
-    list(APPEND CTEST_ENVIRONMENT "MAGICK_THREAD_LIMIT=1")
-  endif()
-
-  message(STATUS "Comparing magicktest1.png with magicktest2.png")
-  set(IM_TEST_FILES "${CCSD}/magicktest1.png" "${CCSD}/magicktest2.png")
-  set(COMPARE_ARGS ${IMAGE_COMPARE_EXE} ${IM_TEST_FILES} -alpha On -compose difference -composite -threshold 8% -morphology Erode Square -format %[fx:w*h*mean] info:)
-  # compare arguments taken from test_cmdline_tool.py
-  execute_process(COMMAND ${COMPARE_ARGS} RESULT_VARIABLE IM_RESULT OUTPUT_VARIABLE IM_OUT)
-  if (IM_RESULT)
-    message(STATUS "ImageMagick failed to run")
-    message(STATUS "Using alternative image comparison")
-    set(DIFFPNG 1)
-  elif (${IM_OUT} STREQUAL "0")
-     message(STATUS "magicktest1.png and magicktest2.png were incorrectly detected as identical")
-     message(STATUS "Using alternative image comparison")
-     set(DIFFPNG 1)
+    message(STATUS "Comparing magicktest1.png with magicktest2.png")
+    set(IM_TEST_FILES "${CCSD}/magicktest1.png" "${CCSD}/magicktest2.png")
+    set(COMPARE_ARGS ${IMAGE_COMPARE_EXE} ${IM_TEST_FILES} -alpha On -compose difference -composite -threshold 8% -morphology Erode Square -format %[fx:w*h*mean] info:)
+    # compare arguments taken from test_cmdline_tool.py
+    message(STATUS "Running ImageMagick compare: ${COMPARE_ARGS}")
+    execute_process(COMMAND ${COMPARE_ARGS} RESULT_VARIABLE IM_RESULT OUTPUT_VARIABLE IM_OUT)
+    if (IM_RESULT)
+      message(STATUS "ImageMagick failed to run")
+      message(STATUS "Using alternative image comparison")
+      set(DIFFPNG 1)
+    elif (${IM_OUT} STREQUAL "0")
+       message(STATUS "magicktest1.png and magicktest2.png were incorrectly detected as identical")
+       message(STATUS "Using alternative image comparison")
+       set(DIFFPNG 1)
+    else()
+      message(STATUS "ImageMagick OK: Detected pixel difference of ${IM_OUT}")
+    endif()
   else()
-    message(STATUS "ImageMagick OK: Detected pixel difference of ${IM_OUT}")
+    message(STATUS "Couldn't find imagemagick 'convert' program")
+    set(DIFFPNG 1)
   endif()
-endif()
-
-if (${DIFFPNG})
-  set(IMAGE_COMPARE_EXE ${CCBD}/diffpng)
-  set(COMPARATOR "--comparator=diffpng")
-  add_executable(diffpng diffpng.cpp ${CSD}/src/ext/lodepng/lodepng.cpp)
-  target_include_directories(diffpng PRIVATE ${CSD}/src/ext/lodepng)
-  message(STATUS "using diffpng for image comparison")
+  if (${DIFFPNG})
+    set(IMAGE_COMPARE_EXE ${CCBD}/diffpng)
+    set(COMPARATOR "--comparator=diffpng")
+    add_executable(diffpng diffpng.cpp ${CSD}/src/ext/lodepng/lodepng.cpp)
+    target_include_directories(diffpng PRIVATE ${CSD}/src/ext/lodepng)
+    message(STATUS "using diffpng for image comparison")
+  endif()
 endif()
 
 find_package(Lib3MF QUIET)
