changed to nettle

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -382,9 +382,9 @@ target_include_directories(OpenSCAD SYSTEM PRIVATE ${LIBXML2_INCLUDE_DIR})
 target_link_libraries(OpenSCAD PRIVATE ${LIBXML2_LIBRARIES})
 
 if(ENABLE_PYTHON)
-  find_package(CryptoPP REQUIRED)
-  target_include_directories(OpenSCAD PRIVATE ${CryptoPP_INCLUDE_DIRS})
-  target_link_libraries(OpenSCAD PRIVATE ${CryptoPP_LIBRARIES})
+  find_package(NETTLE REQUIRED)
+  target_include_directories(OpenSCAD PRIVATE ${NETTLE_INCLUDE_DIRS})
+  target_link_libraries(OpenSCAD PRIVATE ${NETTLE_LIBRARIES})
   message(STATUS "Python enabled, using Crypto++ ${PC_CryptoPP_VERSION}")
   if(MXECROSS)
     SET(PYTHON_DEVPATH "${CMAKE_CURRENT_SOURCE_DIR}/python")
