updates for mac O# Please enter the commit message for your changes. Lines starting

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -382,9 +382,15 @@ target_include_directories(OpenSCAD SYSTEM PRIVATE ${LIBXML2_INCLUDE_DIR})
 target_link_libraries(OpenSCAD PRIVATE ${LIBXML2_LIBRARIES})
 
 if(ENABLE_PYTHON)
-  find_package(NETTLE REQUIRED)
-  target_include_directories(OpenSCAD PRIVATE ${NETTLE_INCLUDE_DIRS})
-  target_link_libraries(OpenSCAD PRIVATE ${NETTLE_LIBRARIES})
+  if(APPLE)	
+    target_include_directories(OpenSCAD PRIVATE "/usr/local/include")
+    target_link_directories(OpenSCAD PRIVATE "/usr/local/lib")
+    target_link_libraries(OpenSCAD PRIVATE "libnettle.a")
+  else()	  
+    find_package(NETTLE REQUIRED)
+    target_include_directories(OpenSCAD PRIVATE ${NETTLE_INCLUDE_DIRS})
+    target_link_libraries(OpenSCAD PRIVATE ${NETTLE_LIBRARIES})
+  endif()    
   message(STATUS "Python enabled, using Crypto++ ${PC_CryptoPP_VERSION}")
   if(MXECROSS)
     SET(PYTHON_DEVPATH "${CMAKE_CURRENT_SOURCE_DIR}/python")
@@ -469,9 +475,15 @@ message(STATUS "Flex: ${FLEX_VERSION}")
 
 find_package(BISON REQUIRED QUIET)
 message(STATUS "Bison: ${BISON_VERSION}")
-find_package(JPEG REQUIRED QUIET)
-target_include_directories(OpenSCAD SYSTEM PRIVATE ${JPEG_INCLUDE_DIRS})
-target_link_libraries(OpenSCAD PRIVATE ${JPEG_LIBRARIES})
+if(APPLE)
+    target_include_directories(OpenSCAD PRIVATE "/usr/local/include")
+    target_link_directories(OpenSCAD PRIVATE "/usr/local/lib")
+    target_link_libraries(OpenSCAD PRIVATE "libjeg.a")
+else()	
+  find_package(JPEG REQUIRED QUIET)
+  target_include_directories(OpenSCAD SYSTEM PRIVATE ${JPEG_INCLUDE_DIRS})
+  target_link_libraries(OpenSCAD PRIVATE ${JPEG_LIBRARIES})
+endif()
 
 if(NOT MSVC)
   find_package(Lib3MF QUIET)
