fixed tpo f# Please enter the commit message for your changes. Lines starting

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -478,7 +478,7 @@ message(STATUS "Bison: ${BISON_VERSION}")
 if(APPLE)
     target_include_directories(OpenSCAD PRIVATE "/usr/local/include")
     target_link_directories(OpenSCAD PRIVATE "/usr/local/lib")
-    target_link_libraries(OpenSCAD PRIVATE "libjeg.a")
+    target_link_libraries(OpenSCAD PRIVATE "libjpeg.a")
 else()	
   find_package(JPEG REQUIRED QUIET)
   target_include_directories(OpenSCAD SYSTEM PRIVATE ${JPEG_INCLUDE_DIRS})
