back to cryptopp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -217,10 +217,10 @@ macro(find_graphics)
 
     target_compile_definitions(OpenSCAD PRIVATE ENABLE_OPENCSG)
 
-    if (${OPENCSG_VERSION_STRING} VERSION_LESS "1.6.0")
+    #    if (${OPENCSG_VERSION_STRING} VERSION_LESS "1.6.0")
       set(OPENCSG_GLEW ON)
       target_compile_definitions(OpenSCAD PRIVATE OPENCSG_GLEW)
-    endif()
+      #endif()
 
     if (NOT USE_GLAD AND NOT USE_GLEW)
       if (OPENCSG_GLEW)
@@ -388,10 +388,10 @@ if(ENABLE_PYTHON)
     target_include_directories(OpenSCAD PRIVATE "/usr/local/include")
     target_link_directories(OpenSCAD PRIVATE "/usr/local/lib")
     target_link_libraries(OpenSCAD PRIVATE "libnettle.a")
-  else()	  
-    find_package(NETTLE REQUIRED)
-    target_include_directories(OpenSCAD PRIVATE ${NETTLE_INCLUDE_DIRS})
-    target_link_libraries(OpenSCAD PRIVATE ${NETTLE_LIBRARIES})
+  else()
+    find_package(CryptoPP REQUIRED)
+    target_include_directories(OpenSCAD PRIVATE ${CryptoPP_INCLUDE_DIRS})
+    target_link_libraries(OpenSCAD PRIVATE ${CryptoPP_LIBRARIES})
   endif()    
   message(STATUS "Python enabled, using Crypto++ ${PC_CryptoPP_VERSION}")
   if(MXECROSS)
