using python_yield now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -393,7 +393,7 @@ if(ENABLE_PYTHON)
     target_include_directories(OpenSCAD PRIVATE ${CryptoPP_INCLUDE_DIRS})
     target_link_libraries(OpenSCAD PRIVATE ${CryptoPP_LIBRARIES})
   endif()    
-  message(STATUS "Python enabled, using Crypto++ ${PC_CryptoPP_VERSION}")
+  message(STATUS "Crypto++ ${CryptoPP_VERSION} needed for Python ")
   if(MXECROSS)
     SET(PYTHON_DEVPATH "${CMAKE_CURRENT_SOURCE_DIR}/python")
     SET(PYTHON_PACKAGEFOLDER "https://mirror.msys2.org/mingw/mingw64")
@@ -409,10 +409,11 @@ if(ENABLE_PYTHON)
     target_include_directories(OpenSCAD SYSTEM PRIVATE "${PYTHON_DEVPATH}/mingw64/include/${PYTHON_VERSION}")
     target_link_libraries(OpenSCAD PRIVATE "${PYTHON_DEVPATH}/mingw64/lib/lib${PYTHON_VERSION}.dll.a")
   else()	  
-    find_package(Python REQUIRED COMPONENTS Interpreter Development)
-    target_include_directories(OpenSCAD PRIVATE ${Python_INCLUDE_DIRS})
-    target_link_libraries(OpenSCAD PRIVATE ${Python_LIBRARIES})
+    find_package(PythonLibs  REQUIRED COMPONENTS Interpreter Development)
+    target_include_directories(OpenSCAD PRIVATE ${PYTHON_INCLUDE_DIRS})
+    target_link_libraries(OpenSCAD PRIVATE ${PYTHON_LIBRARIES})
   endif()  
+  message(STATUS "Python enabled ${PYTHONLIBS_FOUND} ${PYTHON_LIBRARIES}")
   if(ENABLE_LIBFIVE)
     add_subdirectory(submodules/libfive EXCLUDE_FROM_ALL)
     target_link_libraries(OpenSCAD PRIVATE libfive)
