--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,7 @@ option(ENABLE_TBB "Enable support for oneAPI Threading Building Blocks." ON)
 option(ALLOW_BUNDLED_HIDAPI "Allow usage of bundled HIDAPI library (Windows only)." OFF)
 option(ENABLE_PYTHON "Enable experimental Python Interpreter" OFF)
 option(ENABLE_LIBFIVE "Enable libfive Library" OFF)
+option(ENABLE_CRYPTOPP "Enable cryptopp Library with python" ON)
 include(CMakeDependentOption)
 cmake_dependent_option(APPLE_UNIX "Build OpenSCAD in Unix mode in MacOS X instead of an Apple Bundle" OFF "APPLE" OFF)
 cmake_dependent_option(ENABLE_QTDBUS "Enable DBus input driver for Qt5." ON "NOT HEADLESS" OFF)
@@ -384,16 +385,18 @@ target_include_directories(OpenSCAD SYSTEM PRIVATE ${LIBXML2_INCLUDE_DIR})
 target_link_libraries(OpenSCAD PRIVATE ${LIBXML2_LIBRARIES})
 
 if(ENABLE_PYTHON)
-  if(APPLE)	
-    target_include_directories(OpenSCAD PRIVATE "/usr/local/include")
-    target_link_directories(OpenSCAD PRIVATE "/usr/local/lib")
-    target_link_libraries(OpenSCAD PRIVATE "libnettle.a")
-  else()
-    find_package(CryptoPP REQUIRED)
-    target_include_directories(OpenSCAD PRIVATE ${CryptoPP_INCLUDE_DIRS})
-    target_link_libraries(OpenSCAD PRIVATE ${CryptoPP_LIBRARIES})
-  endif()    
-  message(STATUS "Crypto++ ${CryptoPP_VERSION} needed for Python ")
+  if(ENABLE_CRYPTOPP)	
+    if(APPLE)	
+      target_include_directories(OpenSCAD PRIVATE "/usr/local/include")
+      target_link_directories(OpenSCAD PRIVATE "/usr/local/lib")
+      target_link_libraries(OpenSCAD PRIVATE "libnettle.a")
+    else()
+      find_package(CryptoPP REQUIRED)
+      target_include_directories(OpenSCAD PRIVATE ${CryptoPP_INCLUDE_DIRS})
+      target_link_libraries(OpenSCAD PRIVATE ${CryptoPP_LIBRARIES})
+    endif()    
+    message(STATUS "Crypto++ ${CryptoPP_VERSION} needed for Python ")
+  endif()  
   if(MXECROSS)
     SET(PYTHON_DEVPATH "${CMAKE_CURRENT_SOURCE_DIR}/python")
     SET(PYTHON_PACKAGEFOLDER "https://mirror.msys2.org/mingw/mingw64")
@@ -838,6 +841,9 @@ if(ENABLE_PYTHON)
 		    src/core/pyopenscad.cc 
 		    src/core/pyfunctions.cc)
 	target_compile_definitions(OpenSCAD PRIVATE ENABLE_PYTHON)
+	if(ENABLE_CRYPTOPP)
+		target_compile_definitions(OpenSCAD PRIVATE ENABLE_CRYPTOPP)
+	endif()		
 	if(ENABLE_LIBFIVE)
 		list(APPEND CORE_SOURCES
 			src/core/pylibfive.cc 
