move towards nanobind

--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 [submodule "OpenCSG"]
 	path = submodules/OpenCSG
 	url = https://github.com/openscad/OpenCSG.git
+[submodule "src/python/nanobind"]
+	path = src/python/nanobind
+	url = https://github.com/wjakob/nanobind.git
