Not sure why the Include Path and Library file for python was hardcoded here. This uses the path and library found by cmake instead.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -471,8 +471,8 @@ if(ENABLE_PYTHON)
     target_include_directories(OpenSCADPy SYSTEM PRIVATE ${HARFBUZZ_INCLUDE_DIRS})
     target_include_directories(OpenSCADPy SYSTEM PRIVATE ${FREETYPE_INCLUDE_DIRS})
   else() #MXE
-    SET(PYTHON_LIBRARIES "/lib64/libpython3.11.so.1.0" )
-    SET(PYTHON_INCLUDE_DIRS "/usr/include/python3.11/" )
+    SET(PYTHON_LIBRARIES ${Python_LIBRARIES} )
+    SET(PYTHON_INCLUDE_DIRS ${Python_INCLUDE_DIRS} )
     target_link_libraries(OpenSCADPy PRIVATE ${PYTHON_LIBRARIES})
     target_include_directories(OpenSCADPy PRIVATE ${PYTHON_INCLUDE_DIRS})
     message(STATUS "Python enabled ${PYTHONLIBS_FOUND} ${PYTHON_LIBRARIES}")
