--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -834,6 +834,7 @@ set(CORE_SOURCES
   src/core/LinearExtrudeNode.cc
   src/core/PathExtrudeNode.cc
   src/core/OversampleNode.cc
+  src/core/DebugNode.cc
   src/core/LocalScope.cc
   src/core/ScopeContext.cc
   src/core/module.cc
