--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -902,6 +902,7 @@ set(CORE_SOURCES
   src/io/export_obj.cc
   src/io/export_off.cc
   src/io/export_wrl.cc
+  src/io/export_ps.cc
   src/io/export_pdf.cc
   src/io/export_stl.cc
   src/io/export_svg.cc
