--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,6 @@
 [submodule "OpenCSG"]
 	path = submodules/OpenCSG
 	url = https://github.com/openscad/OpenCSG.git
+[submodule "submodules/mujs"]
+	path = submodules/mujs
+	url = http://git.ghostscript.com/mujs.git
